Bootstrap and test results for 3.3.3:
  alphaev68-dec-osf5.1

Test results for 3.3.3:

  i686-pc-linux-gnu (lots, plus a set using a variety of BOOT_CFLAGS)
  m68k-unknown-linux-gnu
  sparc-sun-solaris2.9

--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -115,9 +115,11 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>alphaev68-dec-osf5.1</td>
 <td>Tru64 5.1A</td>
 <td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-02/msg01315.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2004-02/msg01094.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-08/msg00983.html">3.3.1</a>
 <br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01223.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00854.html">3.3.1</a>
 </td>
 </tr>
@@ -375,6 +377,8 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>i686-pc-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01308.html">3.3.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01243.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01036.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-11/msg00572.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-11/msg00550.html">3.3.2</a>
@@ -395,6 +399,18 @@ NOTE: the submitter reported that thread support is broken and asked
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00948.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00945.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00940.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>variety of options for BOOT_CFLAGS</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01254.html">3.3.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01234.html">3.3.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01222.html">3.3.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01218.html">3.3.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01214.html">3.3.3</a>,
 </td>
 </tr>
 
@@ -705,8 +721,9 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>m68k-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01184.html">3.3</a>,
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00466.html">3.3.1</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01228.html">3.3.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00466.html">3.3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01184.html">3.3</a>
 </td>
 </tr>
 
@@ -979,6 +996,8 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>sparc-sun-solaris2.9</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01217.html">3.3.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01235.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-11/msg00396.html">3.3.2</a>
 </td>
 </tr>
