Fix an entry for powerpc-ibm-aix that had the wrong OS version.

--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -781,10 +781,17 @@ NOTE: the submitter reported that thread support is broken and asked
 </tr>
 
 <tr>
+<td>powerpc-ibm-aix4.3.3.0</td>
+<td>&nbsp;</td>
+<td>Bootstrap (C,C++):
+<a href="http://gcc.gnu.org/ml/gcc/2004-01/msg01241.html">3.3.2</a>
+</td>
+</tr>
+
+<tr>
 <td>powerpc-ibm-aix5.1.0.0</td>
 <td>&nbsp;</td>
 <td>Bootstrap:
-<a href="http://gcc.gnu.org/ml/gcc/2004-01/msg01241.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2004-01/msg00488.html">3.3.2</a>
 </td>
 </tr>
