--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -144,7 +144,8 @@ and try to avoid cross posting a message to several lists.</p>
 
 <p>Please refrain from sending messages in HTML, RTF or similar formats.</p>
 
-<p>Please do not include or reference confidentiality notices, like:</p>
+<p id="confidential">Please do not include or reference confidentiality
+notices, like:</p>
 <blockquote>
 	<p>The referring document contains privileged and confidential
 	information. If you are not the intended recipient
