--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>libgcj -vs- Classpath</title>
-<link rel="stylesheet" type="text/css" href="http://gcc.gnu.org/gcc.css">
+<link rel="stylesheet" type="text/css" href="http://gcc.gnu.org/gcc.css"></link>
 </head>
 <body>
 <h1>libgcj -vs- Classpath</h1>
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-03-04.
+2004-03-05.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -17,7 +17,7 @@ has been reintroduced.  <em>Note that such differences cannot be
 automatically merged.</em> Any merging must be done manually; some
 differences are currently required.</p>
 
-<table border="1" width="100%" border="1" cellspacing="0" cellpadding="1">
+<table width="100%" border="1" cellspacing="0" cellpadding="1">
 <tr><th align="left">Class</th> <th>Merge Status</th> </tr>
 <tr> <td class="needsmerge">gnu.java.nio.FileLockImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.FileLockImpl.diff">Diff</a></td> </tr>
 <tr> <td class="libgcj-only">gnu.java.nio.channels.FileChannelImpl</td> <td class="libgcj-only">GCJ-only</td> </tr>
