Mention the tree-profiling-branch

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -196,6 +196,15 @@ particular releases or snapshots or the latest snapshot.  </p>
   <dd>Work on implementing SSA analysis and optimization for trees 
   is done in this branch.</dd>
 
+  <dt>tree-profiling-branch</dt>
+  <dd>A sub-branch of tree-ssa for the development of profiling heuristics
+  and profile based optimizations for trees, such as profile driven inline
+  heuristics.  Another goal of this branch is to demonstrate that maintaining
+  the CFG and profile information over expanding from GIMPLE trees to RTL
+  is feasible and can bring considerable performance improvements.  This
+  branch shall contain only patches not acceptable for tree-ssa because of
+  the pre-merge freeze.</dd>
+
   <dt><a href="projects/tree-ssa/lno.html">lno-branch</a></dt> 
   <dd>A sub-branch of tree-ssa that aims at implementing a loop
   nest optimizer at the tree level.</dd>
