* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-03-08.
+2004-03-09.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -29,6 +29,8 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">gnu.javax.swing.plaf.gtk.GtkSliderUI</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.javax.swing.plaf.gtk.SliderTest</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.beans.BeanDescriptor</td> <td class="needsmerge"><a href="compare/java.beans.BeanDescriptor.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.io.BufferedInputStream</td> <td class="needsmerge"><a href="compare/java.io.BufferedInputStream.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.File</td> <td class="needsmerge"><a href="compare/java.io.File.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.FileDescriptor</td> <td class="needsmerge"><a href="compare/java.io.FileDescriptor.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.FileInputStream</td> <td class="needsmerge"><a href="compare/java.io.FileInputStream.diff">Diff</a></td> </tr>
@@ -73,10 +75,12 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.nio.channels.Channels</td> <td class="needsmerge"><a href="compare/java.nio.channels.Channels.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.nio.channels.FileChannelImpl</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">java.security.BasicPermission</td> <td class="needsmerge"><a href="compare/java.security.BasicPermission.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.text.AttributedString</td> <td class="needsmerge"><a href="compare/java.text.AttributedString.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.AttributedStringIterator</td> <td class="needsmerge"><a href="compare/java.text.AttributedStringIterator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.CollationElementIterator</td> <td class="needsmerge"><a href="compare/java.text.CollationElementIterator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.CollationKey</td> <td class="needsmerge"><a href="compare/java.text.CollationKey.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.Collator</td> <td class="needsmerge"><a href="compare/java.text.Collator.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.text.DateFormatSymbols</td> <td class="needsmerge"><a href="compare/java.text.DateFormatSymbols.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.RuleBasedCollator</td> <td class="needsmerge"><a href="compare/java.text.RuleBasedCollator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.ResourceBundle</td> <td class="needsmerge"><a href="compare/java.util.ResourceBundle.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.regex.Matcher</td> <td class="needsmerge"><a href="compare/java.util.regex.Matcher.diff">Diff</a></td> </tr>
