--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -73,6 +73,16 @@ For <code>javax.crypto</code> support, we recommend the use of
 <!-- News entries start here -->
 
 <tr><td valign="top">
+<b>March 9, 2004</b>
+</td><td>
+Thanks to Wes Biggs and the other GNU Regexp authors, Mark Wielaard
+(for merging into Classpath) and Anthony Green (for merging into
+libgcj), we now have support for <code>java.util.regex</code>.  This
+arrives a little too late for gcc 3.4, but it will appear in the next
+release.
+</td></tr>
+
+<tr><td valign="top">
 <b>January 22, 2004</b>
 </td><td>
 Graydon Hoare has checked in
