* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-03-10.
+2004-03-11.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -19,7 +19,10 @@ differences are currently required.</p>
 
 <table width="100%" border="1" cellspacing="0" cellpadding="1">
 <tr><th align="left">Class</th> <th>Merge Status</th> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.ClasspathFontPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.ClasspathFontPeer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkArgList</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkArgList.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.nio.FileLockImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.FileLockImpl.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.nio.PipeImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.PipeImpl.diff">Diff</a></td> </tr>
 <tr> <td class="libgcj-only">gnu.java.nio.channels.FileChannelImpl</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="classpath-only">gnu.javax.swing.plaf.gtk.GtkBorders</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.javax.swing.plaf.gtk.GtkCheckBoxUI</td> <td class="classpath-only">Classpath-only</td> </tr>
