--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -79,6 +79,14 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>alphaev56-dec-osf4.0e</td>
+<td>&nbsp;</td>
+<td>Bootstrap (C, C++, F77):
+<a href="http://gcc.gnu.org/ml/gcc/2004-03/msg00045.html">3.3.2</a>
+</td>
+</tr>
+
+<tr>
 <td>alphaev6-dec-osf5.1</td>
 <td>Compaq Tru64 Unix; native cc, as, ld</td>
 <td>Bootstrap (C, C++, ObjC, F77, Java):
@@ -322,6 +330,14 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>Red Hat 7.3, glibc 2.2.5, kernel 2.4.20</td>
 <td>Bootstrap:
 <a href="http://gcc.gnu.org/ml/gcc/2003-06/msg02459.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i586-pc-linux-gnu</td>
+<td>Slackware 9.1, glibc 2.3.2</td>
+<td>Bootstrap (C, C++, F77, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-02/msg01477.html">3.3.3</a>
 </td>
 </tr>
 
@@ -600,6 +616,14 @@ NOTE: the submitter reported that thread support is broken and asked
 </tr>
 
 <tr>
+<td>ia64-hp-hpux11.23</td>
+<td>GNU make, as, ld</td>
+<td>Bootstrap (C, C++, F77, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-03/msg00434.html">3.3.3</a>
+</td>
+</tr>
+
+<tr>
 <td>ia64-hp-hpux11.22</td>
 <td>as from binutils 2.14</td>
 <td>Bootstrap (C, C++, F77, Obj-C):
@@ -669,6 +693,14 @@ NOTE: the submitter reported that thread support is broken and asked
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00758.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00275.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00942.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>mips-sgi-irix6.5</td>
+<td>&nbsp;</td>
+<td>Bootstrap (C, C++, F77):
+<a href="http://gcc.gnu.org/ml/gcc/2004-03/msg00046.html">3.3.3</a>
 </td>
 </tr>
 
@@ -761,6 +793,8 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>Mac OS X 10.2.8</td>
 <td>Bootstrap (C, C++, F77, Java, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2003-10/msg00770.html">3.3.2</a>
+<br />Bootstrap (C, C++, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2004-02/msg01496.html">3.3.3</a>
 </td>
 </tr>
 
@@ -769,6 +803,15 @@ NOTE: the submitter reported that thread support is broken and asked
 <td> Mac OS X 10.3</td>
 <td>Bootstrap (with tweaks):
 <a href="http://gcc.gnu.org/ml/gcc/2003-10/msg00565.html">3.3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>powerpc-apple-darwin-7.2.0</td>
+<td>Mac OS X 10.3.2</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-03/msg00171.html">3.3.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2004-03/msg00010.html">3.3.3</a>
 </td>
 </tr>
 
@@ -800,6 +843,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>powerpc-ibm-aix5.2.0.0</td>
 <td>&nbsp;</td>
 <td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-03/msg00170.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-11/msg01493.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-11/msg00697.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01612.html">3.3</a>
@@ -1035,6 +1079,14 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>SunOS 5.9, Sun as and ld</td>
 <td>Bootstrap:
 <a href="http://gcc.gnu.org/ml/gcc/2003-08/msg00549.html">3.3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>sparcv9-sun-solaris2.9 (64-bit)</td>
+<td>SunOS 5.9, GNU as and ld</td>
+<td>Bootstrap (C, C++, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-03/msg00279.html">3.3.3</a>
 </td>
 </tr>
 
