Added link to merge status message.

--- a/htdocs/projects/tree-ssa/index.html
+++ b/htdocs/projects/tree-ssa/index.html
@@ -9,7 +9,7 @@
 <h2>Table of Contents</h2>
 
 <ul>
-<li><a href="#news">Latest news (last updated: 2004-02-25)</a></li>
+<li><a href="#news">Latest news (last updated: 2004-03-12)</a></li>
 <li><a href="#intro">Introduction</a></li>
 <li><a href="#documentation">Documentation</a></li>
 <li><a href="#contributing">Contributing</a></li>
@@ -25,14 +25,23 @@
 <hr />
 <h2><a name="news">Latest News</a></h2>
 
-<p>The branch will be merged into mainline to become part of the next
-release of GCC.  As such, the branch is now <em>closed</em> to new
-development.</p>
+<dl>
+<dt>2004-03-12</dt>
+<dd><p>Merge status: <a
+href="http://gcc.gnu.org/ml/gcc/2004-03/msg00596.html">http://gcc.gnu.org/ml/gcc/2004-03/msg00596.html</a>.</p>
+    <p><a href="http://tinyurl.com/32paa">Bug reports opened against
+    the branch</a>.</p></dd>
 
-<p>The stabilization process will be driven by the merge criteria
-stated in <a
-href="http://gcc.gnu.org/ml/gcc/2004-02/msg01294.html">http://gcc.gnu.org/ml/gcc/2004-02/msg01294.html</a>.
-We expect to merge the branch into mainline by mid to late April.</p>
+<dt>2004-02-25</dt>
+<dd><p>The branch will be merged into mainline to become part of the next
+    release of GCC.  As such, the branch is now <em>closed</em> to new
+    development.</p>
+
+    <p>The stabilization process will be driven by the merge criteria
+    stated in <a href="http://gcc.gnu.org/ml/gcc/2004-02/msg01294.html">http://gcc.gnu.org/ml/gcc/2004-02/msg01294.html</a>.
+    We expect to merge the branch into mainline by mid to late
+    April.</p></dd>
+</dl>
 
 <hr />
 <h3><a name="intro">Introduction</a></h3>
