--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-03-11.
+2004-03-13.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -21,9 +21,11 @@ differences are currently required.</p>
 <tr><th align="left">Class</th> <th>Merge Status</th> </tr>
 <tr> <td class="needsmerge">gnu.java.awt.peer.ClasspathFontPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.ClasspathFontPeer.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkArgList</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkArgList.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkFontPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkFontPeer.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.nio.FileLockImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.FileLockImpl.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.nio.PipeImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.PipeImpl.diff">Diff</a></td> </tr>
 <tr> <td class="libgcj-only">gnu.java.nio.channels.FileChannelImpl</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="needsmerge">gnu.javax.rmi.CORBA.DelegateFactory</td> <td class="needsmerge"><a href="compare/gnu.javax.rmi.CORBA.DelegateFactory.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">gnu.javax.swing.plaf.gtk.GtkBorders</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.javax.swing.plaf.gtk.GtkCheckBoxUI</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.javax.swing.plaf.gtk.GtkIconFactory</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -32,12 +34,12 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">gnu.javax.swing.plaf.gtk.GtkSliderUI</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.javax.swing.plaf.gtk.SliderTest</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.beans.BeanDescriptor</td> <td class="needsmerge"><a href="compare/java.beans.BeanDescriptor.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.io.BufferedInputStream</td> <td class="needsmerge"><a href="compare/java.io.BufferedInputStream.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.io.BufferedReader</td> <td class="needsmerge"><a href="compare/java.io.BufferedReader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.File</td> <td class="needsmerge"><a href="compare/java.io.File.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.FileDescriptor</td> <td class="needsmerge"><a href="compare/java.io.FileDescriptor.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.FileInputStream</td> <td class="needsmerge"><a href="compare/java.io.FileInputStream.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.FileOutputStream</td> <td class="needsmerge"><a href="compare/java.io.FileOutputStream.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.io.FilePermission</td> <td class="needsmerge"><a href="compare/java.io.FilePermission.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.InputStreamReader</td> <td class="needsmerge"><a href="compare/java.io.InputStreamReader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.ObjectInputStream</td> <td class="needsmerge"><a href="compare/java.io.ObjectInputStream.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.OutputStreamWriter</td> <td class="needsmerge"><a href="compare/java.io.OutputStreamWriter.diff">Diff</a></td> </tr>
@@ -66,6 +68,7 @@ differences are currently required.</p>
 <tr> <td class="VM-specific">java.lang.reflect.Field</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="VM-specific">java.lang.reflect.Method</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="needsmerge">java.lang.reflect.Modifier</td> <td class="needsmerge"><a href="compare/java.lang.reflect.Modifier.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.net.HttpURLConnection</td> <td class="needsmerge"><a href="compare/java.net.HttpURLConnection.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.InetAddress</td> <td class="needsmerge"><a href="compare/java.net.InetAddress.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.JarURLConnection</td> <td class="needsmerge"><a href="compare/java.net.JarURLConnection.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.net.MimeTypeMapper</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -78,14 +81,13 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.nio.channels.Channels</td> <td class="needsmerge"><a href="compare/java.nio.channels.Channels.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.nio.channels.FileChannelImpl</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">java.security.BasicPermission</td> <td class="needsmerge"><a href="compare/java.security.BasicPermission.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.text.AttributedString</td> <td class="needsmerge"><a href="compare/java.text.AttributedString.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.text.AttributedStringIterator</td> <td class="needsmerge"><a href="compare/java.text.AttributedStringIterator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.CollationElementIterator</td> <td class="needsmerge"><a href="compare/java.text.CollationElementIterator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.CollationKey</td> <td class="needsmerge"><a href="compare/java.text.CollationKey.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.Collator</td> <td class="needsmerge"><a href="compare/java.text.Collator.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.text.DateFormatSymbols</td> <td class="needsmerge"><a href="compare/java.text.DateFormatSymbols.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.RuleBasedCollator</td> <td class="needsmerge"><a href="compare/java.text.RuleBasedCollator.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.Locale</td> <td class="needsmerge"><a href="compare/java.util.Locale.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.ResourceBundle</td> <td class="needsmerge"><a href="compare/java.util.ResourceBundle.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.logging.Level</td> <td class="needsmerge"><a href="compare/java.util.logging.Level.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.zip.Deflater</td> <td class="needsmerge"><a href="compare/java.util.zip.Deflater.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.util.zip.DeflaterConstants</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.DeflaterEngine</td> <td class="classpath-only">Classpath-only</td> </tr>
