* index.html: Link to Jessie.  Mention `major' release.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -63,6 +63,13 @@ For <code>javax.crypto</code> support, we recommend the use of
 <a href="http://www.gnu.org/software/gnu-crypto/">GNU Crypto</a>.
 </p>
 
+<p>
+For JSSE
+(including <code>javax.net</code>, <code>javax.net.ssl</code>,
+and <code>javax.security.cert</code> support), we recommend
+<a href="http://www.nongnu.org/jessie/">Jessie</a>.
+</p>
+
 <br />
 <br />
 
@@ -79,7 +86,7 @@ Thanks to Wes Biggs and the other GNU Regexp authors, Mark Wielaard
 (for merging into Classpath) and Anthony Green (for merging into
 libgcj), we now have support for <code>java.util.regex</code>.  This
 arrives a little too late for gcc 3.4, but it will appear in the next
-release.
+major release.
 </td></tr>
 
 <tr><td valign="top">
