--- a/htdocs/bugs.html
+++ b/htdocs/bugs.html
@@ -699,11 +699,11 @@ public:
   A();
 
 private:
-  A(const A& );   // private copy ctor
+  A(const A&);    // private copy ctor
 };
 
 A makeA(void);
-void foo(const A& a);
+void foo(const A&);
 
 void bar(void)
 {
@@ -726,7 +726,7 @@ can be elided, but the semantic constraints (eg. accessibility) of the
 copy constructor still have to be checked.</p>
 
 <p>For further information, you can consult the following paragraphs of
-the C++ standard: [dcl.init.ref]/5, bullet 2, sub-bullet 1, and 
+the C++ standard: [dcl.init.ref]/5, bullet 2, sub-bullet 1, and
 [class.temporary]/2.</p></dd>
 </dl>
 
