--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-03-20.
+2004-03-21.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -19,16 +19,27 @@ differences are currently required.</p>
 
 <table width="100%" border="1" cellspacing="0" cellpadding="1">
 <tr><th align="left">Class</th> <th>Merge Status</th> </tr>
+<tr> <td class="needsmerge">gnu.java.net.PlainDatagramSocketImpl</td> <td class="needsmerge"><a href="compare/gnu.java.net.PlainDatagramSocketImpl.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.net.PlainSocketImpl</td> <td class="needsmerge"><a href="compare/gnu.java.net.PlainSocketImpl.diff">Diff</a></td> </tr>
+<tr> <td class="classpath-only">gnu.java.net.content.text.plain</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="GCJ-specific">gnu.java.net.protocol.core.Connection</td> <td class="GCJ-specific">GCJ-specific</td> </tr>
+<tr> <td class="GCJ-specific">gnu.java.net.protocol.core.CoreInputStream</td> <td class="GCJ-specific">GCJ-specific</td> </tr>
+<tr> <td class="GCJ-specific">gnu.java.net.protocol.core.Handler</td> <td class="GCJ-specific">GCJ-specific</td> </tr>
+<tr> <td class="needsmerge">gnu.java.net.protocol.file.Connection</td> <td class="needsmerge"><a href="compare/gnu.java.net.protocol.file.Connection.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.net.protocol.file.Handler</td> <td class="needsmerge"><a href="compare/gnu.java.net.protocol.file.Handler.diff">Diff</a></td> </tr>
+<tr> <td class="GCJ-specific">gnu.java.net.protocol.gcjlib.Connection</td> <td class="GCJ-specific">GCJ-specific</td> </tr>
+<tr> <td class="GCJ-specific">gnu.java.net.protocol.gcjlib.Handler</td> <td class="GCJ-specific">GCJ-specific</td> </tr>
+<tr> <td class="needsmerge">gnu.java.net.protocol.http.Connection</td> <td class="needsmerge"><a href="compare/gnu.java.net.protocol.http.Connection.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.net.protocol.jar.Connection</td> <td class="needsmerge"><a href="compare/gnu.java.net.protocol.jar.Connection.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.nio.FileLockImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.FileLockImpl.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.nio.PipeImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.PipeImpl.diff">Diff</a></td> </tr>
 <tr> <td class="libgcj-only">gnu.java.nio.channels.FileChannelImpl</td> <td class="libgcj-only">GCJ-only</td> </tr>
-<tr> <td class="classpath-only">gnu.javax.swing.plaf.gtk.GtkBorders</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="classpath-only">gnu.javax.swing.plaf.gtk.GtkCheckBoxUI</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="classpath-only">gnu.javax.swing.plaf.gtk.GtkIconFactory</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="classpath-only">gnu.javax.swing.plaf.gtk.GtkLookAndFeel</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="classpath-only">gnu.javax.swing.plaf.gtk.GtkRadioButtonUI</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="classpath-only">gnu.javax.swing.plaf.gtk.GtkSliderUI</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="classpath-only">gnu.javax.swing.plaf.gtk.SliderTest</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="libgcj-only">gnu.java.rmi.server.RMIIncomingThread</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="needsmerge">gnu.java.rmi.server.UnicastConnection</td> <td class="needsmerge"><a href="compare/gnu.java.rmi.server.UnicastConnection.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.rmi.server.UnicastConnectionManager</td> <td class="needsmerge"><a href="compare/gnu.java.rmi.server.UnicastConnectionManager.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.rmi.server.UnicastRef</td> <td class="needsmerge"><a href="compare/gnu.java.rmi.server.UnicastRef.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.rmi.server.UnicastRemoteCall</td> <td class="needsmerge"><a href="compare/gnu.java.rmi.server.UnicastRemoteCall.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.rmi.server.UnicastServer</td> <td class="needsmerge"><a href="compare/gnu.java.rmi.server.UnicastServer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.rmi.server.UnicastServerRef</td> <td class="needsmerge"><a href="compare/gnu.java.rmi.server.UnicastServerRef.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.File</td> <td class="needsmerge"><a href="compare/java.io.File.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.FileDescriptor</td> <td class="needsmerge"><a href="compare/java.io.FileDescriptor.diff">Diff</a></td> </tr>
@@ -65,6 +76,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.net.InetAddress</td> <td class="needsmerge"><a href="compare/java.net.InetAddress.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.JarURLConnection</td> <td class="needsmerge"><a href="compare/java.net.JarURLConnection.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.net.MimeTypeMapper</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="needsmerge">java.net.URI</td> <td class="needsmerge"><a href="compare/java.net.URI.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.URL</td> <td class="needsmerge"><a href="compare/java.net.URL.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.URLClassLoader</td> <td class="needsmerge"><a href="compare/java.net.URLClassLoader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.URLConnection</td> <td class="needsmerge"><a href="compare/java.net.URLConnection.diff">Diff</a></td> </tr>
@@ -73,6 +85,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.nio.MappedByteBufferImpl</td> <td class="needsmerge"><a href="compare/java.nio.MappedByteBufferImpl.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.nio.channels.Channels</td> <td class="needsmerge"><a href="compare/java.nio.channels.Channels.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.nio.channels.FileChannelImpl</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="needsmerge">java.rmi.server.RemoteServer</td> <td class="needsmerge"><a href="compare/java.rmi.server.RemoteServer.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.security.BasicPermission</td> <td class="needsmerge"><a href="compare/java.security.BasicPermission.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.CollationElementIterator</td> <td class="needsmerge"><a href="compare/java.text.CollationElementIterator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.CollationKey</td> <td class="needsmerge"><a href="compare/java.text.CollationKey.diff">Diff</a></td> </tr>
