--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-03-22.
+2004-03-23.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -33,6 +33,9 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">gnu.java.net.protocol.jar.Connection</td> <td class="needsmerge"><a href="compare/gnu.java.net.protocol.jar.Connection.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.nio.FileLockImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.FileLockImpl.diff">Diff</a></td> </tr>
 <tr> <td class="libgcj-only">gnu.java.nio.channels.FileChannelImpl</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="needsmerge">java.awt.FontMetrics</td> <td class="needsmerge"><a href="compare/java.awt.FontMetrics.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.Graphics</td> <td class="needsmerge"><a href="compare/java.awt.Graphics.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.event.MouseEvent</td> <td class="needsmerge"><a href="compare/java.awt.event.MouseEvent.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.File</td> <td class="needsmerge"><a href="compare/java.io.File.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.FileDescriptor</td> <td class="needsmerge"><a href="compare/java.io.FileDescriptor.diff">Diff</a></td> </tr>
