Changed '&' into '&amp;'

--- a/htdocs/bugs.html
+++ b/htdocs/bugs.html
@@ -699,11 +699,11 @@ public:
   A();
 
 private:
-  A(const A&);    // private copy ctor
+  A(const A&amp;);   // private copy ctor
 };
 
 A makeA(void);
-void foo(const A&);
+void foo(const A&amp;);
 
 void bar(void)
 {
