--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -545,11 +545,11 @@
 	  A();
 	  
 	private:
-	  A(const A& );   // private copy ctor
+	  A(const A&amp;);   // private copy ctor
 	};
 	
 	A makeA(void);
-	void foo(const A& a);
+	void foo(const A&amp;);
 	
 	void bar(void)
 	{
