* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-03-23.
+2004-03-24.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -102,6 +102,8 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">java.util.zip.OutputWindow</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.PendingBuffer</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.StreamManipulator</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.imageio.spi.RegisterableService</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.imageio.spi.ServiceRegistry</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.BAD_OPERATION</td> <td>No</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.CORBA.ObjectImpl</td> <td>No</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.CORBA.SystemException</td> <td>No</td> </tr>
