* status.html: Updated japi link.

--- a/htdocs/java/status.html
+++ b/htdocs/java/status.html
@@ -52,10 +52,10 @@ you should not (yet) rely on their correctness for security.</li>
 </table>
 
 
-<p>You can also see <a href="http://japi.sab39.org/">a comparison of
-libgcj with the JDK</a>.  This is updated nightly.  It is run against
-the cvs trunk, and includes GNU Crypto in its analysis.  This is the
-most up-to-date analysis of API differences.  </p>
+<p>You can also see <a href="http://www.kaffe.org/~stuart/japi/">a
+comparison of libgcj with the JDK</a>.  This is updated nightly.  It
+is run against the cvs trunk, and includes GNU Crypto in its analysis.
+This is the most up-to-date analysis of API differences.  </p>
 
 <dl>
 <dt class="package">java.applet</dt>
