Bootstrap and test results for 3.3.3:
  i386-pc-solaris2.5.1

Bootstrap for 3.3.3:

  alpha-dec-osf4.0f
  sparc-sun-solaris2.9

--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -26,6 +26,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>alpha-dec-osf4.0f</td>
 <td>&nbsp;</td>
 <td>Bootstrap (C, C++, F77, Obj-C, Java, Ada; with tweaks):
+<a href="http://gcc.gnu.org/ml/gcc/2004-03/msg01036.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-11/msg00690.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-09/msg01275.html">3.3.1</a>
 <a href="http://gcc.gnu.org/ml/gcc/2003-07/msg00014.html">3.3</a>
@@ -228,6 +229,16 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00344.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01094.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i386-pc-solaris2.5.1</td>
+<td>Sun ld and as</td>
+<td>Bootstrap (C, C++, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-03/msg00888.html">3.3.3</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc/2004-03/msg00888.html">3.3.3</a>
 </td>
 </tr>
 
@@ -1029,6 +1040,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>sparc-sun-solaris2.9</td>
 <td>SunOS 5.9, Sun as and ld</td>
 <td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-03/msg01423.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-08/msg00531.html">3.3.1</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00929.html">3.3</a>
