--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -346,6 +346,14 @@ NOTE: the submitter reported that thread support is broken and asked
 
 <tr>
 <td>i586-pc-linux-gnu</td>
+<td>Slackware 8.1, glibc 2.2.5, kernel 2.6.3</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-03/msg01198.html">3.3.2</a>
+</td>
+</tr>
+
+<tr>
+<td>i586-pc-linux-gnu</td>
 <td>Slackware 9.1, glibc 2.3.2</td>
 <td>Bootstrap (C, C++, F77, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2004-02/msg01477.html">3.3.3</a>
