Add http://gcc.fyxm.net/ mirror.

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -45,6 +45,7 @@ sites</a>.</p>
 <li>Poland: <a href="ftp://ftp.task.gda.pl/pub/gnu/gcc/">ftp.task.gda.pl</a>, thanks to ftpadmin at task dot gda dot pl</li>
 <li>Poland (Warsaw): <a href="ftp://sunsite.icm.edu.pl/pub/gnu/gcc/">sunsite.icm.edu.pl</a>, thanks to sunsite at icm dot edu dot pl</li>
 <li>Russia (Moscow, no snapshots): <a href="ftp://linux.ihep.su/pub/cygnus/egcs/">linux.ihep.su</a></li>
+<li>Slovakia (Bratislava): <a href="http://gcc.fyxm.net/">gcc.fyxm.net</a>, thanks to Jan Teluch (admin at 2600 dot sk)</li>
 <li>South Africa: <a href="ftp://ftp.sun.ac.za/mirrorsites/sourceware.cygnus.com/pub/gcc/">ftp.sun.ac.za</a></li>
 <li>Taiwan: <a href="ftp://ftp1.sinica.edu.tw/pub3/GNU/CYGNUS/gcc/">ftp1.sinica.edu.tw</a></li>
 <li>Taiwan: <a href="ftp://ftp.nctu.edu.tw/computer-languages/C/gcc/">ftp.nctu.edu.tw</a>, thanks to ftpadm at ftp dot nctu dot edu dot tw</li>
