--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-03-27.
+2004-03-28.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -61,6 +61,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.lang.StringBuffer</td> <td class="needsmerge"><a href="compare/java.lang.StringBuffer.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.System</td> <td class="needsmerge"><a href="compare/java.lang.System.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.Thread</td> <td class="needsmerge"><a href="compare/java.lang.Thread.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.lang.Throwable</td> <td class="needsmerge"><a href="compare/java.lang.Throwable.diff">Diff</a></td> </tr>
 <tr> <td class="VM-specific">java.lang.VMClassLoader</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="VM-specific">java.lang.VMSecurityManager</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="VM-specific">java.lang.VMThrowable</td> <td class="VM-specific">VM-specific</td> </tr>
@@ -87,6 +88,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.text.CollationKey</td> <td class="needsmerge"><a href="compare/java.text.CollationKey.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.Collator</td> <td class="needsmerge"><a href="compare/java.text.Collator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.RuleBasedCollator</td> <td class="needsmerge"><a href="compare/java.text.RuleBasedCollator.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.Properties</td> <td class="needsmerge"><a href="compare/java.util.Properties.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.ResourceBundle</td> <td class="needsmerge"><a href="compare/java.util.ResourceBundle.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.logging.Level</td> <td class="needsmerge"><a href="compare/java.util.logging.Level.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.zip.Deflater</td> <td class="needsmerge"><a href="compare/java.util.zip.Deflater.diff">Diff</a></td> </tr>
