Added design notes for the stree project

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -161,7 +161,7 @@ particular releases or snapshots or the latest snapshot.  </p>
   at Apple.  Patches should be marked with the tag
   <code>[apple-ppc]</code> in the subject line.</dd>
 
-  <dt>stree-branch</dt>
+  <dt><a href="projects/strees/index.html">stree-branch</a></dt>
   <dd>This branch is for improving compilation speed and reducing
   memory use by representing declarations as small flat data
   structures whenever possible, lazily expanding them into full trees
