Removed bogus trailing tag.

--- a/htdocs/projects/strees/index.html
+++ b/htdocs/projects/strees/index.html
@@ -215,7 +215,7 @@ have to know about strees: code that goes through bindings to get trees
 looks exactly as before. It has the defect that, as presently written,
 it requires code duplication. The code required to generate an
 enumerator node is in both <tt>build_enumerator</tt>
-and <tt>s_tree_to_tree</tt>. </span>Additionally, <tt>s_tree_to_tree</tt>
+and <tt>s_tree_to_tree</tt>. Additionally, <tt>s_tree_to_tree</tt>
 is manageable only because at the moment it only handles a single
 case. If this project succeeds, and we're handling many kinds of
 strees, it would become a monstrosity. The right solution will
